refactor (remove unused code)